@@ -27,6 +27,7 @@ Scott Bailey <scott_bailey@users.sourceforge.net>
 Aleksander Jaromin <olqjar@o2.pl>
 Zbigniew Zagórski <z.zagorski@gmail.com>
 Jiri Malak <malak.jiri@gmail.com>
+Stefan Csomor <csomor@advancedconcepts.ch>
 
 
  Reused code:
